alucommondir = $(includedir)/dune/alugrid/common
alucommon_HEADERS = backuprestore.hh \
										bndprojection.hh \
										capabilities.hh \
										declaration.hh \
										defaultindexsets.hh \
										geostorage.hh \
										intersectioniteratorwrapper.hh \
										interfaces.hh \
										memory.hh \
										objectfactory.hh \
										persistentcontainer.hh \
										transformation.hh

include $(top_srcdir)/am/global-rules
