alucommondir = $(includedir)/dune/alugrid/common
alucommon_HEADERS = alugrid_assert.hh \
                    backuprestore.hh \
                    bndprojection.hh \
                    capabilities.hh \
                    declaration.hh \
                    defaultindexsets.hh \
                    duneassert.hh \
                    fromtogridfactory.hh \
                    geostorage.hh \
                    hsfc.hh \
                    intersectioniteratorwrapper.hh \
                    interfaces.hh \
                    ldbhandleif.hh \
                    macrogridview.hh \
                    memory.hh \
                    persistentcontainer.hh \
                    structuredgridfactory.hh \
                    transformation.hh \
                    typetraits.hh \
                    twists.hh \
                    writeparalleldgf.hh

include $(top_srcdir)/am/global-rules
