paralleldir = dune/alugrid/impl/parallel
parallel_HEADERS = alumetis.hh aluparmetis.hh alusfc.hh gitter_hexa_top_pll.h \
		   gitter_pll_impl.h gitter_pll_ldb.h gitter_pll_mgb.h \
		   gitter_pll_sti.h gitter_tetra_top_pll.h mpAccess.h \
		   mpAccess_MPI.h mpAccess_STAR.h

EXTRA_DIST = gitter_hexa_top_pll.cc gitter_pll_idn.cc gitter_pll_impl.cc \
             gitter_pll_ldb.cc gitter_pll_mgb.cc gitter_pll_sti.cc \
	     gitter_tetra_top_pll.cc mpAccess.cc mpAccess_MPI.cc

include $(top_srcdir)/am/global-rules
